--- a/app/region/region.css
+++ b/app/region/region.css
@@ -7,6 +7,8 @@
 	--widthNx: calc(-1px * var(--width));
 	--heightNx: calc(-1px * var(--height));
 	/*pointer-events: none;*/
+
+	z-index: 5000000;
 }
 
 .region.region-lava .sprite,
@@ -23,8 +25,8 @@
 	--bottomBoundary: -1px;
 
 	top: calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry)));
-	bottom: calc( var(--bottomBoundary) + 1px);
 
+	bottom: calc( var(--bottomBoundary) + 1px);
 
 	left: max(0.00001px, var(--leftBoundry) + 16px);
 
@@ -36,13 +38,17 @@
 	z-index: 1001;
 }
 
+.region.region-water .sprite {
+	top: calc( calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry))) - 16px);
+}
+
 .region.region-water .region-color-wrapper {
 	overflow: hidden;
 	position: absolute;
-	left:    0;
-	right: 0;
-	top:     0;
-	bottom: 64px;
+	left:   0;
+	right:  0;
+	top:    12px;
+	bottom: 48px;
 }
 
 .region.region-lava .region-color-wrapper {
@@ -50,23 +56,35 @@
 	position: absolute;
 	left:    0;
 	right:   0;
-	top:     0px;
+	top:     -4px;
 	bottom:  64px;
 }
 
 .region.region-lava .region-color,
 .region.region-water .region-color {
 	background-color: rgba(0,128,255,0.25);
+	max-height: var(--viewportHeight);
+}
+
+.region.region-lava .sprite,
+.region.region-water .sprite,
+.region.region-lava .region-filter-wrapper,
+.region.region-water .region-filter-wrapper,
+.region.region-lava .region-color-wrapper,
+.region.region-water .region-color-wrapper {
+	max-height: calc(var(--viewportHeight) + 80px);
+}
+
+.region.region-lava .region-filter-wrapper {
 
 }
 
-.region.region-lava .region-filter-wrapper,
 .region.region-water .region-filter-wrapper {
 	overflow: hidden;
 	position: absolute;
-	left:    0;
-	right: 0;
-	top:     0;
+	left:   0;
+	right:  0;
+	top:    0;
 	bottom: 64px;
 }
 
@@ -77,7 +95,7 @@
 	position: absolute;
 	left:    0;
 	right:   0;
-	top:     0;
+	top:     4px;
 	bottom: -64px;
 }
 
@@ -104,7 +122,6 @@
 
 	background-position: 0px 0px;
 
-	transform: translateY(-16px);
 
 	/*animation:  100ms steps(1,end) infinite;
 	background-position-x: 0px;
