--- a/app/actor/point-actor.css
+++ b/app/actor/point-actor.css
@@ -102,6 +102,14 @@
 	left: 0px;
 }
 
+
+
+.actor-item.actor-bumper .sprite {
+	background-image: url(/Sonic/score-orb.png);
+	width: 32px;
+	height: 32px;
+}
+
 .actor-item.actor-switch .sprite,
 .actor-item.actor-block .sprite,
 .actor-item.actor-marble-companion-block .sprite,
