Ceiling and floor engagement glitches and backdrop swapping

--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -276,6 +276,11 @@
 	width: 8em;
 }
 
+.screen-card-main-menu ul {
+	height: 7em;
+	overflow: auto;
+}
+
 .screen-card-main-menu li {
 	position: relative;
 }
