--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -586,6 +586,11 @@ input[type=number]::-webkit-outer-spin-button {
 	/*background-image: url(/Sonic/marble-garden-bg.png);
 	background-size: 100% auto;
 	background-position: calc(0.1px * var(--x)) calc(calc(var(--y) / var(--yMax)) * 100%);*/
+	min-height: calc(100%);
+	--height: calc(256px - 512px);
+}
+
+.backdrop.marble-garden {
 	background-color: #4848d8;
 	height: 632px;
 }
@@ -593,10 +598,18 @@ input[type=number]::-webkit-outer-spin-button {
 .backdrop .parallax {
 	position: absolute;
 	left: 0;
-	top: 0;
 	width: 100%;
+}
+
+.backdrop.marble-garden .parallax {
 	height: 632px;
 	transform: translateY(calc(calc(var(--y) / var(--yMax)) * calc(256px - 512px)));
+}
+
+.backdrop.proto-labrynth .parallax {
+	height: auto;
+	top: max( calc(100% - calc(0px + calc(1px * var(--top)))),  0%);
+	bottom: max( calc(100% - calc(-0px + calc(1px * var(--bottom)))),  0%);
 }
 
 .viewport.standalone {
