--- a/app/powerups/sheild.css
+++ b/app/powerups/sheild.css
@@ -157,6 +157,9 @@
 	top: 10px;
 }
 
+.actor-seymour .electric-sheild,
+.actor-seymour .bubble-sheild,
+.actor-seymour .fire-sheild,
 .actor-eggrobo .electric-sheild,
 .actor-eggrobo .bubble-sheild,
 .actor-eggrobo .fire-sheild,
