--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -648,3 +648,7 @@ input[type=number]::-webkit-outer-spin-button {
 	transform-origin: top left;
 	background-color: transparent !important;
 }
+
+.viewport-bg-layers [data-name^="Collision"] {
+	/*opacity: 0.1;*/
+}
