Level switching, physics, breakable blocks, slope-to-air physics, camera tweaks, speed hax

--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -279,9 +279,11 @@
 .screen-card-main-menu ul {
 	height: 7em;
 	overflow: auto;
+	scroll-snap-type: y mandatory;
 }
 
 .screen-card-main-menu li {
+	scroll-snap-align: center;
 	position: relative;
 }
 
