--- a/app/powerups/sheild.css
+++ b/app/powerups/sheild.css
@@ -45,8 +45,8 @@
 
 .electric-sheild.boosted {
 	animation:
-		electric-sheild-flash 0.15s steps(3) infinite forwards,
-		sheild-flip 0.35s infinite;
+		electric-sheild-flash 0.20s steps(3) infinite forwards,
+		sheild-flip 0.45s infinite;
 }
 
 .fire-sheild {
@@ -157,6 +157,9 @@
 	top: 10px;
 }
 
+.actor-chalmers .electric-sheild,
+.actor-chalmers .bubble-sheild,
+.actor-chalmers .fire-sheild,
 .actor-seymour .electric-sheild,
 .actor-seymour .bubble-sheild,
 .actor-seymour .fire-sheild,
