--- a/app/actor/spring.css
+++ b/app/actor/spring.css
@@ -28,6 +28,7 @@
 	--sprite-offset-x: -80px;
 	--sprite-offset-y: -92px;
 	transition: top 0.4s ease-out 0.2s;
+	z-index: 1;
 }
 
 .actor-item.actor-spring .spring-pad:not([data-color=""]) {
