--- a/app/actor/chalmers.css
+++ b/app/actor/chalmers.css
@@ -29,7 +29,7 @@
 .actor-item.actor-chalmers[data-animation="running"] .sprite:after {
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: -128px;
-	animation: chalmers-run steps(5) infinite 192ms;
+	animation: chalmers-run steps(5) infinite calc(calc(calc(1 - var(--animation-bias)) * 160ms) + 80ms);
 }
 
 .actor-item.actor-chalmers[data-animation="rolling"] .sprite:after,
